<resources>
    <string name="app_name">Clean Architecture Assignment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tittle_login_screen">Welcome Back! \n Please log in to your account.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="log_in">Log In</string>
    <string name="sign_up_text"><u>Don\'t have an account?Sign Up Here</u></string>
    <string name="profile">Profile</string>
    <string name="person_name">Person Name</string>
    <string name="task">tasj</string>
    <string name="location">loc</string>
    <string name="_18">hf</string>
    <string name="_4">if\\</string>
    <string name="userid">Userid</string>
    <string name="user_address_zip_code">User Address Zip code</string>
    <string name="phone_number">Phone Number</string>
    <string name="note">Note</string>
    <string name="edit_message">Edit Message</string>
    <string name="suspension_risk">Suspension Risk:</string>
    <string name="minor_branch">Minor Branch</string>
    <string name="cancellation">Cancellation</string>
    <string name="major_branch">Major Branch</string>
    <string name="__4">4</string>
    <string name="_5">5</string>
    <string name="_22">22</string>
    <string name="token_type">Token Type</string>
    <string name="percentage">%</string>
    <string name="sendMail">Send Mail</string>
    <string name="no_internet">Check Your Internet</string>
</resources>